# oulad-eda

./: README.md  launcher.py  pyproject.toml
mappings/: activity_type_map.json  age_band_map.json  assessment_type_map.json  code_module_map.json  code_presentation_map.json  disability_map.json  final_result_map.json  gender_map.json  highest_education_map.json  imd_band_map.json  region_map.json
notebooks/: eda_oulad.ipynb
sql/full_domain/: fd_student_assessments.sql  fd_student_vles.sql
sql/raw_tables/: 01_courses.sql  01_courses_raw.sql  02_student_infos_raw.sql  02_students_infos.sql  03_assessments.sql  03_assessments_raw.sql  04_vle.sql  04_vles.sql  04_vles_raw.sql  05_student_assessments_raw.sql  05_studentassessment.sql  05_students_assessments.sql  06_student_vles_raw.sql  06_students_vles.sql  07_student_registrations_raw.sql  07_students_registrations.sql  assessment.sql  courses.sql  studentassessment.sql  studentinfo.sql  studentregistration.sql  studentvle.sql
sql/transformed_tables/: 01_courses.sql  02_student_infos.sql  03_assessments.sql  04_vles.sql  05_student_assessments.sql  06_student_vles.sql  07_student_registrations.sql
src/oulad/etl/: create_tables.py  create_views.py  derived_features.py  drop_all_tables.py  encoder.py  imputation.py  load_raw_tables.py  pipeline.py  transform.py
